Contact: Fixed icons on mobile

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -74,8 +74,6 @@
     overflow: visible;
     padding: 10px;
     width: 40px;
-    height: 40px;
-
 }
 
 .contact-info-text {
